SEBSERV-632 also implemented SEBSERV-651 for testing